<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/book2"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="8dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/LogoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/your_stroke_color"
                app:shapeAppearanceOverlay="@style/RoundedTextInputLayout"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_stroke_color"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupUsernameText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/your_stroke_color"
                app:shapeAppearanceOverlay="@style/RoundedTextInputLayout"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_stroke_color"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/your_stroke_color"
                app:shapeAppearanceOverlay="@style/RoundedTextInputLayout"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_stroke_color"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupPasswordText"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_gender"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <RadioGroup
                android:id="@+id/GenderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="16sp"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/countrySelect"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    app:cornerRadius="15dp"
                    android:backgroundTint="#0048FF"
                    android:textColor="@color/white"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:enabled="true"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_an_account"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/white"
                android:textColor="#0048FF"
                android:text="@string/login"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>