<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhiteTextColor" />

    <TextView
        android:id="@+id/textAddURLTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:includeFontPadding="false"
        android:text="@string/layout_add_url_text_add_url_title_text"
        android:textColor="@color/colorWhiteTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddURL"
        app:layout_constraintTop_toTopOf="@id/imageAddURL" />

    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:fontFamily="serif-monospace"
        android:gravity="center_vertical"
        android:hint="@string/layout_add_url_input_url_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/colorWhiteTextColor"
        android:textColorHint="@color/colorTextHint"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/layout_add_url_text_add_text"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputURL" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/layout_add_url_text_cancel_text"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputURL" />
</androidx.constraintlayout.widget.ConstraintLayout>