<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/book2"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:elevation="8dp"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/LogoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/your_stroke_color"
                app:shapeAppearanceOverlay="@style/RoundedTextInputLayout"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginUsernameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/your_stroke_color"
                app:shapeAppearanceOverlay="@style/RoundedTextInputLayout"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/your_stroke_color"
                app:shapeAppearanceOverlay="@style/RoundedTextInputLayout"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordText"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_marginTop="5dp"
                app:cornerRadius="15dp"
                android:backgroundTint="#0048FF"
                android:textColor="@color/white"
                android:text="@string/login"
                android:enabled="true"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/do_you_have_an_account"
                android:textSize="15sp"
                android:textStyle="italic" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_marginTop="5dp"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/white"
                android:textColor="#0048FF"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>