<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorMiscellaneousBackground"
    android:orientation="vertical"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:fontFamily="serif"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/layout_miscellaneous_text_miscellaneous_text"
        android:textColor="@color/colorWhiteTextColor"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorTextHint" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorTextHint" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorTextHint" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorTextHint" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorTextHint" />
        </FrameLayout>

        <TextView
            android:id="@+id/textPickColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_pick_color_text"
            android:textColor="@color/colorWhiteTextColor"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="monospace"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_add_image_text"
            android:textColor="@color/colorIcons"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/textAddURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="serif-monospace"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_add_url_text"
            android:textColor="@color/colorIcons"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:id="@+id/textDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="serif"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_delete_note_text"
            android:textColor="@color/colorDelete"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>